<resources>

    <string name="app_name">Appy Birthday</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_delete">Delete profile</string>
    <string name="title_activity_main">Appy Birthday</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_profile_my">My profile</string>
    <string name="title_profile_sent">Sent</string>
    <string name="title_profile_received">Received</string>
    <string name="sayHappyBirthday">Say Appy Birthday!</string>
    <string name="action_save">Save</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birth_date">Birth date</string>
    <string name="title_birth_date">Birth date</string>
    <string name="title_device_info">Device</string>
    <string name="title_tag_line">Tagline</string>
    <string name="alreadyCongratulated">Appy Birthday sent!</string>
    <string name="usesPhoneFormat">%s USES:</string>
	<string name="saving_profile">Saving profile&#8230;</string>
	<string name="birthday_not_set">Not set</string>
	<string name="share_intent_text">See birthdays of other Android users and congratulate them with this http://bit.ly/S0V6zn</string>
	<string name="unread_birthday_wishes">unread birthday wishes</string>
	<string name="not_implemented_yet">Not implemented yet</string>
	<string name="no_received_wishes">No received wishes</string>
	<string name="no_sent_wishes">No sent wishes</string>
</resources>